# study

./: README.md  ReadMe  fifo-list.c  fifo.c  git-study.files  open_serial_port.c  test_pointer.c
c/: fifo-status.c  sizeof.c  test.c
c++/: Base64.cpp  Base64.h  CMakeLists.txt  box_class  box_class.cpp  box_class.h  dbclass.cpp  dbclass.h  effective.cpp  effective.h  factory.cpp  md5sha.cpp  md5sha.h  pkcs8.cpp  pkcs8.h  singleton.cpp  thread.cpp
file/: file_fwr.c
fock/: ReadMe.txt  fock.c
openssl/: openssl_base64.c  pthread_cond_wait.c  verfid-command.txt  verfy-sign.c  verfy_cert.c
openssl/command/: a.out  cacert.pem  cacert.srl  command-func.c  private.pem  public.pem  secondary.crt  secondary.csr  secondary.key  secondary_public.pem  signature  verfid-command.txt
proxy-server/: libcur.c
python/: addSpaceComments.py  tess-getopt.py
python/basic-syntax/: basic.py  tess-getopt.py
python/reptile/: baidutieba.py  cookie.py  demo.py  exericise1.py  file.py  importH.py  re.py
socket/: client.c  server.c
web/: Test.html  error.html
web/cgi-bin/: Install.py  UnitTest.sh
web/css/: index.css  test.css
web/js/: json_parse.js  test.js
